fix timestamptype header

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -196,6 +196,7 @@
         },
         "timestamp": {
           "label": "Timestamp",
+          "acceptlabel":"Responding with timestamp type",
           "tooltip": "An estimated, requested, planned or actual timestamp of an event."
         },
         "timestamps": {
