Implement reject timestamp dialog box

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -107,7 +107,18 @@
           "detail": "Successfully accepted timestamp",
           "summary": "Success!"
         }
-      },
+        },
+        "Rejecteditor": {
+          "label": "Reject Timestamp",
+          "failure": {
+            "summary": "Error!",
+            "detail": "Error while rejecting timestamp: "
+          },
+          "success": {
+            "detail": "Successfully rejected timestamp",
+            "summary": "Success!"
+          }
+        },
       "label": "Save"
     },
     "table": {
