Show latest Comm. time in TC table and sort by it
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -355,6 +355,9 @@
         },
         "facilityCode": {
           "label": "Facility Code"
+        },
+        "latestEventCreatedDateTime": {
+          "label": "Latest Comm. time"
         }
       },
       "validation": {
