--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,7 +90,7 @@
         "label": "Create Timestamp",
         "failure": {
           "summary": "Error!",
-          "detail": "Error while adding timestamp: "
+          "detail": "Errors while adding timestamp: "
         },
         "success": {
           "detail": "Successfully added a new timestamp",
