DDT-1168: add milesToDestinationPort option & more
- Enforce validators on milesToDestinationPort
- enforce validators on vessel position
- add lang & syntax

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -267,6 +267,11 @@
           "pattern": "Longitude should only be numbers!"
         }
       },
+      "milesToDestinationPort": {
+        "name": "milesToDestinationPort",
+        "label": "Miles remaining to destination", 
+        "pattern": "should should only be numbers!"
+      },
       "locationName": {
         "label": "Location Name"
       },
