DDT-1171: Location option depends on EventLocationRequirement
- location option is enforced when EventLocationRequirement is mandatory.
- location option label depends on facilityTypeCode.
- error shown if location option mandatory
- Terminal is not enforced when timestamp not checked (bug)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -332,7 +332,8 @@
           "secondLabel": "Port of Call"
         },
         "locationName": {
-          "label": "Location Name"
+          "label": "Location Name",
+          "required": "Location is required for timestamp type: "
         },
         "UNLocationName": {
           "label": "UN Location Name"
