--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -238,7 +238,8 @@
     },
     "terminal": {
       "label": "Terminal",
-      "select": "Select terminal"
+      "select": "Select terminal",
+      "portLevelFilter": "Port wide timestamps (i.e., no terminal)"
     },
     "timestamp": {
       "label": "Timestamp",
@@ -269,7 +270,7 @@
       },
       "milesToDestinationPort": {
         "name": "milesToDestinationPort",
-        "label": "Miles remaining to destination", 
+        "label": "Miles remaining to destination",
         "pattern": "should should only be numbers!"
       },
       "locationName": {
