DDT-1170: Publisher pattern alignment
- show timestamp types depending on user role
- allow user to select PR within a matching set when appropriate

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -280,7 +280,7 @@
         "event": "Event date",
         "log": "Log date"
       },
-      "select": "Select timestamp",
+      "select": "Select a timestamp",
       "time": "Time",
       "validation": {
         "timestampType": {
@@ -306,7 +306,8 @@
     },
     "publisherRole": {
       "tooltip": "Publisher role",
-      "label": "Publisher role"
+      "label": "Publisher role",
+      "select": "Select a publisher Role"
     },
     "transportCall": {
       "add": "Add a new Transport Call",
