DDT-1204: backend filtering NegotiationCycle
- and minor lang change

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -306,7 +306,8 @@
     },
     "publisherRole": {
       "tooltip": "Publisher role",
-      "label": "Publisher role"
+      "label": "Publisher role",
+      "select": "select publisher role"
     },
     "transportCall": {
       "add": "Add a new Transport Call",
