Minor tweaks of config/translation
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -306,7 +306,8 @@
     },
     "publisherRole": {
       "tooltip": "Publisher role",
-      "label": "Publisher role"
+      "label": "Publisher role",
+      "select": "Select Publisher Role"
     },
     "transportCall": {
       "add": "Add a new Transport Call",
