Introduce a "Show as JSON" button
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,9 @@
     "close": {
       "label": "Close"
     },
+    "showAsJson": {
+      "label": "Show JSON payload"
+    },
     "schedule": {
       "header": "Delay Code and Comment to port call event",
       "select": "Select delay code (optional)",
