--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -271,12 +271,11 @@
       "milesToDestinationPort": {
         "name": "milesToDestinationPort",
         "label": "Miles remaining to destination",
-        "pattern": "should should only be numbers!"
+        "pattern": "Only numbers, with at most one decimal"
       },
       "vesselDraft": {
-        "name": "vesselDraft",
-        "label": "vessel Draft",
-        "pattern": "should should only be numbers!",
+        "label": "Vessel draft",
+        "pattern": "Only numbers, with at most one decimal",
         "missingUnit": "Define a Dimension unit for the vessel to use this field"
       },
       "locationName": {
