Add filter by negotiation cycle in select timestamp type
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -184,6 +184,9 @@
             "grey": "Timestamp has been delivered"
           }
         },
+        "negotiationCycle": {
+          "label": "Filter timestamp by terminal call event (e.g., service/arrival at berth)"
+        },
         "nextPort": {
           "label": "Next port",
           "tooltip": "What is the next port in the rotation?"
