DDT-1240: Correct label for vessel call sign

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -445,7 +445,7 @@
       "select": "All vessels",
       "serviceName": "Service name",
       "operatorCarrierID": "Operator Carrier ID",
-      "callSignNumber": "Call Sign Number",
+      "callSignNumber": "Call Sign",
       "vesselOperatorCarrierCode": "Operator Carrier Code",
       "size": "Vessel size (TEU)",
       "flag": "Vessel Flag",
