DDT-1243: Provide edit button on creating timestamp
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -437,7 +437,7 @@
       },
       "edit": {
         "header": "Edit vessel",
-        "label": "Edit a vessel"
+        "label": "Edit vessel"
       },
       "label": "Vessel",
       "name": "Vessel name",
